--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,15 @@
-
-*{
-	
+.container {
+    max-width: 1200px;
+    padding: 0 40px;
+    margin: 0 auto;
+    background-color: #cccccc;
 }
+
+
 
 
 @import 'blocks/header';
 @import 'blocks/content';
 @import 'blocks/footer';
 @import 'blocks/media';
+@import 'blocks/nav';
