--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,65 +1,5 @@
-.footer {
+.widget{
     display: flex;
-    width: 100%;
-    border-top: 1px solid #000;
-    margin-top: 15px;
-}
-.footer__left, .footer__right{
-    display: flex;
+    flex-wrap: nowrap;
     justify-content: space-between;
-    font-size: 14px;
-    line-height: 22px;
-    color: white;
-    margin-top: 14px;
-    &_top, &_bottom{
-        display: flex;
-        background: linear-gradient(45deg, rgba(137, 76, 119, 0.6), rgba(76, 103, 137, 0.6));
-
-    }
-    &_top{
-        padding-left: 10px;
-    }
-    &_bottom{
-        margin-top: 15px;
-        overflow: hidden;
-        img{
-            width: 100%;
-            height: 60px;
-        }
-    }
 }
-.footer__right{
-    flex-direction: column;
-    width: 50%;
-}
-.footer__left{
-    width: 100%;
-}
-
-.footer_list {
-    display: flex;
-    width: 50%;
-    margin-right: 30px;
-    justify-content: space-around;
-    background: linear-gradient(45deg, rgba(137, 76, 119, 0.6), rgba(76, 103, 137, 0.6));
-    ul{
-        list-style-type: none; 
-        column-count: 2;
-        column-gap: 74px;
-    }
-}
-.rate{
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    background: linear-gradient(45deg, rgba(137, 76, 119, 0.6), rgba(76, 103, 137, 0.6));
-    list-style-type: square;
-    padding-left: 30px;
-}
-    
-
-
-
-
-
-
