--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,36 +1,92 @@
 //header srart
-header{
-    flex:  0 0 auto;
+.header{
     width: 100%;
-    height: 100px;
+    height: 60px;
+    background-color: black;
+
 }
-.menu {
+.title{
     display: flex;
-    width: 100%;
     justify-content: space-between;
-    img{
-        border-radius: 50%
-    }
-    &__logo{
-        display: flex;
-        overflow: hidden; 
-        width: 100px;  
-        height:80px;
-        
-    }
-    &__items{
-        display: flex;
-        width: 60%;
-        height: 80px;
-        background: rgba(126, 123, 123, .6);
-    }
-    &__items2{
-        display: flex;
-        width: 40%;
-        margin-left: 15px;
-        height: 80px;
-        background: rgba(126, 123, 123, .6);
-        
-    }
+    margin: 0 40px;
 }
+.wrap{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.logo__left{
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    width: 190px;
+}
+.titleblock__left{
+    font-size: 42px;
+    line-height: 20px;
+    color:  white;
+    margin-top: 10px;
+}
+.titleblock__left::after{
+    content: '';
+    width: 1px;
+    height:50px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 1.04%, #808080 52.6%, rgba(0, 0, 0, 0) 100%);
+    display: block;
+    margin: 0 auto;
+    margin-top: -50px;
+}
+
+span{
+    font-size: 14px;
+    color: red;
+    margin-left: 75px;
+    text-transform: uppercase;
+}
+.promo__left{
+    color: #808080;
+    font-size: 12px;
+    margin-top: 10px;
+    line-height: 12px;
+    margin-left: -100px;
+}
+
+.logo__right{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 190px;
+    height: 60px;
+}
+
+.titleblock__right{
+    direction: rtl;
+    font-size: 42px;
+    line-height: 20px;
+    color:  white;
+    margin-top: 10px;
+}
+.titleblock__right::after{
+    content: '';
+    width: 1px;
+    height:50px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 1.04%, #808080 52.6%, rgba(0, 0, 0, 0) 100%);
+    display: block;
+    margin: 0 auto;
+    margin-top: -50px;
+}
+
+span{
+    font-size: 14px;
+    color: red;
+    margin-right: 75px;
+    text-transform: uppercase;
+}
+.promo__right{
+    color: grey;
+    font-size: 14px;
+    margin-top: 15px;
+    line-height: 12px;
+    margin-right: -15px;
+}
+
+
 //header end
